# libethc

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  ethc.pc  ethc.pc.in
.github/workflows/: CI.yaml  ci-docs.yaml  ci-unix.yaml
cmake/: Findgmp.cmake  Findsecp256k1.cmake
docs/: CMakeLists.txt  abi.rst  account.rst  address.rst  bloom.rst  conf.py.in  ecdsa.rst  examples.rst  hex.rst  index.rst  installation.rst  keccak.rst  requirements.txt  rlp.rst  unit.rst
examples/: eip1559-transaction.c  erc20-balanceOf-call.c  legacy-transaction.c
include/: ethc.h
include/ethc/: abi.h  account.h  address.h  bloom.h  ecc.h  ecdsa.h  erc20.h  ethc-common.h  hex.h  internals.h  keccak256.h  rlp.h  unit.h  utf8.h
include/rpc_call/: RPCall.h  eth-rpc.h  sushiswap.h  uniswap.h
libkeccak/: CMakeLists.txt  KeccakSponge.h
src/: abi.c  account.c  address.c  bloom.c  ecc.c  ecdsa.c  hex.c  internals.c  keccak256.c  main.c  rlp.c  unit.c  utf8.c
src/keccak256/: CMakeLists.txt  config.h
test/: CMakeLists.txt  run-tests.c  test-eth-abi.c  test-eth-account.c  test-eth-address.c  test-eth-bloom.c  test-eth-ecc.c  test-eth-ecdsa.c  test-eth-hex.c  test-eth-keccak256.c  test-eth-rlp.c  test-eth-unit.c  test-eth-utf8.c  test.h
