PROJECT(keccak LANGUAGES C)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(KECCAK_SOURCE_FILES KeccakHash.c KeccakSponge.c KeccakSponge.inc KeccakP-1600-compact64.c)

ADD_LIBRARY(keccak STATIC ${KECCAK_SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

TARGET_INCLUDE_DIRECTORIES(keccak INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_COMPILE_DEFINITIONS(keccak PUBLIC XKCP_has_Sponge_Keccak XKCP_has_FIPS202 XKCP_has_KeccakP1600)

# https://github.com/XKCP/XKCP/blob/master/lib/LowLevel.build#L147
#set(CMAKE_C_FLAGS "-O2 -g0 -march=native -mtune=native")
